--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,8 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "row_value_decimal = []\n",
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +200,7 @@
        "[309, 2, 1021, 1021, 2, 1021, 1021, 2, 64, 2]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
        "['0', '1', '0', '0', '1', '1', '0', '1', '0', '1']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +249,7 @@
        " '0000000010']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +289,7 @@
        " '0000000010']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +331,7 @@
        " ['0', '0', '0', '0', '0', '0', '0', '0', '1', '0']]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,17 +342,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['1', '1', '1', '1', '0', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '1', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '0', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '0', '1', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '1', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '1', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '0', '0', '0', '0', '0', '0'],\n",
+       "       ['1', '1', '1', '1', '1', '0', '0', '0', '0', '0'],\n",
+       "       ['0', '0', '0', '0', '0', '0', '1', '1', '1', '1'],\n",
+       "       ['1', '1', '1', '1', '1', '0', '0', '0', '0', '0']], dtype='|S1')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_a = np.asarray(sorted_a).T\n",
+    "sorted_a"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "one_count = []\n",
