--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -260,13 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.70363616943e-05\n"
+     ]
+    }
+   ],
    "source": [
-    "row_value = sorted(row_value, reverse=True)"
+    "import time\n",
+    "startTime = time.time()\n",
+    "\n",
+    "row_value = sorted(row_value, reverse=True)\n",
+    "elapsedTime = time.time() - startTime\n",
+    "print elapsedTime"
    ]
   },
   {
